-add circle on user icon -avoid image stretching

--- a/uid-pages/layout-bonita/src/assets/css/layout.css
+++ b/uid-pages/layout-bonita/src/assets/css/layout.css
@@ -90,23 +90,25 @@ body > div.container-fluid > div.row:nth-child(2){
     font-size: 1.1em;
 }
 
-.image-cropper {
-    width: 30px;
-    height: 30px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 50%;
+.image-circle {
+  border-radius: 100%;
+  display: flex;
+  flex: 0 0 30px;
+  height: 30px;
+  aligne: center;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+  width: 30px;
+  border: solid 1px lightgrey;
 }
 
-.image-cropper--large {
-    width: 150px;
+.image-circle--large {
+    flex: 0 0 150px;
     height: 150px;
+    width: 150px;
 }
 
-.user-icon {
-  display: inline;
-  margin: 0 auto;
-  /*margin-left: -25%;*/
+.image-circle img {
   height: 100%;
-  width: auto;
 }
